fix: add overflow styling to ASelect

--- a/framework/components/ASelect/ASelect.scss
+++ b/framework/components/ASelect/ASelect.scss
@@ -41,6 +41,13 @@ $select-padding: 6px;
 }
 
 .a-select {
+  &__menu-items {
+    &__wrapper {
+      max-height: 300px;
+      overflow-y: scroll;
+    }
+  }
+
   &__selection-wrapper {
     width: 100%;
     height: 100%;
